Added Doxyfile configuration file to start generating documentation using doxygen.
Added a rule to ignore files in docs-gen as this is the location
where doxygen will place the generated documentation.

The two tracker file changes was due to the original signature file
getting deleted somehow. Added a new one with the author
Luis E Garcia

--- a/Tracker/Tracker.csproj
+++ b/Tracker/Tracker.csproj
@@ -18,6 +18,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>Tracker_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>7212EC151C846A5B396D234462B360642B3B269F</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -94,6 +95,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="project.json" />
+    <None Include="Tracker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -108,7 +110,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="Tracker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
